deployment/employee-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-api-service
  annotations:
    cloud.google.com/backend-config: '{"default":"employee-api-backendconfig"}'
spec:
  selector:
    app: employee-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
